# ai-agent-governance-framework-thesis

./: .gitignore  Architecture  README.md  pyproject.toml  requirements.txt  run_demo.py  run_enhanced_demo.py
.devcontainer/: devcontainer.json
docs/: architecture.md  data_dictionary.md  validation_plan.md
dummy_data/: agents.csv  evaluations.csv  governance_checks.csv  workflows.csv
framework/: __init__.py  agent_registry.py  audit_logger.py  compliance_reporter.py  dashboard.py  evaluator.py  explainability.py  governance.py  metrics.py  models.py  orchestrator.py  realtime_monitor.py  risk_analytics.py  sample_run.py
notebooks/: demo_analysis.ipynb
thesis_proposal/: hypotheses.md  methodology.md  objectives.md  overview.md  references.md  research_question.md  timeline.md
