[project]
name = "ai-agent-governance-framework"
version = "0.1.0"
description = "Enterprise AI Agent Governance Framework"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "flake8",
]
